--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,20 @@ form {
     color: #ff1f02;
 }
 
+@media screen and (max-width: 1024px) {
+    #img {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    #container {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        justify-content: center;
+    }
+}
 
 
 
